Test/dafny0/ErrorsInRelatedModules.dfy.expect
ErrorsInRelatedModules.dfy(9,29): Error: Type or type parameter is not declared in this scope: UndeclaredType (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
ErrorsInRelatedModules.dfy(13,11): Error: not resolving module 'MainModule' because there were errors in resolving its import 'LibraryModule'
ErrorsInRelatedModules.dfy(23,31): Error: Type or type parameter is not declared in this scope: UndeclaredType (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
ErrorsInRelatedModules.dfy(22,11): Error: not resolving module 'OuterModule' because there were errors in resolving its nested module 'NestedModule'
ErrorsInRelatedModules.dfy(34,29): Error: Type or type parameter is not declared in this scope: UndeclaredType (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
ErrorsInRelatedModules.dfy(34,29): Error: Type or type parameter is not declared in this scope: UndeclaredType (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
ErrorsInRelatedModules.dfy(38,11): Error: not resolving module 'ClientModule' because there were errors in resolving its import 'T'
ErrorsInRelatedModules.dfy(59,21): Error: module I does not exist (position 1 in path Middle.I)
ErrorsInRelatedModules.dfy(65,27): Error: Type or type parameter is not declared in this scope: UndeclaredType (did you forget to qualify a name or declare a module import 'opened'? names in outer modules are not visible in nested modules)
ErrorsInRelatedModules.dfy(69,9): Error: not resolving module 'ClientOfErroneousModule0' because there were errors in resolving its import 'ModuleWithErrors'
ErrorsInRelatedModules.dfy(80,9): Error: not resolving module 'ClientOfErroneousModule2' because there were errors in resolving its import 'ModuleWithErrors'
ErrorsInRelatedModules.dfy(95,9): Error: not resolving module 'ClientOfErroneousModule2''' because there were errors in resolving its import 'ModuleWithErrors'
ErrorsInRelatedModules.dfy(101,9): Error: not resolving module 'ClientOfErroneousModule2'3' because there were errors in resolving its import 'ModuleWithErrors'
ErrorsInRelatedModules.dfy(106,9): Error: not resolving module 'ClientOfErroneousModule3' because there were errors in resolving its import 'ModuleWithErrors'
ErrorsInRelatedModules.dfy(121,9): Error: not resolving module 'ClientOfErroneousModule3''' because there were errors in resolving its import 'ModuleWithErrors'
ErrorsInRelatedModules.dfy(129,17): Error: RHS (of type bool) not assignable to LHS (of type int)
ErrorsInRelatedModules.dfy(138,17): Error: RHS (of type bool) not assignable to LHS (of type int)
ErrorsInRelatedModules.dfy(135,9): Error: not resolving module 'ClientOfErroneousModule5' because there were errors in resolving its import 'ModuleWithErrors'
ErrorsInRelatedModules.dfy(151,8): Error: duplicate name of top-level declaration: EverythingHasTheSameName
ErrorsInRelatedModules.dfy(152,11): Error: duplicate name of top-level declaration: EverythingHasTheSameName
ErrorsInRelatedModules.dfy(151,8): Error: a module that already contains a top-level declaration 'EverythingHasTheSameName?' is not allowed to declare a class 'EverythingHasTheSameName'
21 resolution/type errors detected in ErrorsInRelatedModules.dfy
